# tinyrpc

./: CMakeLists.txt
generator/: tinyrpc_generator.py
generator/template/: CMakeLists_client.txt.template  CMakeLists_root.txt.template  CMakeLists_server.txt.template
testcases/: CMakeLists.txt
tinyrpc/: CMakeLists.txt
